--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
@@ -8,38 +9,57 @@
     
     <title> Myself</title>
     <div class="Heading">
-        <h1>ASIPHE NDIMLANA</h1>
+       
+        <h1>RIGBY</h1>
     </div> 
   </head>
-  <body> 
+  <body>
+    <div class="loader"> 
+    <ul class="sun">
+		<li class="mercury-orbit">
+			<div class="mercury"></div>
+		</li>
+		<li class="venus-orbit">
+			<div class="venus"></div>
+		</li>
+		<li class="earth-orbit">
+			<div class="earth"></div>
+		</li>
+		<li class="mars-orbit">
+			<div class="mars"></div>
+		</li>
+		<li class="jupiter-orbit">
+			<div class="jupiter"></div>
+		</li>
+		<li class="saturn-orbit">
+			<div class="saturn"></div>
+		</li>
+	</ul>
     <div class="container">
         <a href="./contactForm.html">Contact me</a>
     <div class="image">
         <img src="./img/rigby.png" alt="Cartoon Character">
     </div>
+    <div class="border"></div>
     <div class="Brief">
         <h3>BRIEF</h3>
-        <p> Asiphe Ndimlana is a male who is 18 years old. </p><br>
-        <p>He only lives with his mother in phillip East, Cape Town.
-            He is a quiet person who occasionally identifies himself as a smart-idiot because he is a smart person and when
-             its necessary he is goofy , which is where "idiot" name comes from. He was always passionate for computer stuff at an early age
-              His hobbies are playing chess and soccer. His favourite team is 
-             the Almighty Arsenal Football club who are about to win the league.
+        <p>Rigby is a 23 year-old slacker who works at the park. </p><br>
+        <p>He is friends with Modecai since childhood, he also has a girlfriend called Marlene.
             </p>
     </div>
+    <div class="border"></div>
     <div class="uprising-and-school">
      <h3>UPRISING AND SCHOOL LIFE</h3>
-     <p>He grew up in small town in the Eastern Cape called Butterworth. 
-        He was raised by his grandmother and uncles.
-    He had lots of friends because he liked having company. He went to Luminous Christian School from grade 1-7. 
-He then went to Butterworth High School from grade 8-12</p>  
+     <p>He dropped out of school because he was not doing homeworks and always skipping class</p>  
     </div>
+    <div class="border"></div>
     <div class="After-high-school">
     <h3>AFTER HIGH SCHOOL</h3>
-    <p>After he finished grade 12 in 2021, he then moved to Cape Town in 2022 to stay with his mom where he was upgrading.
-        Then in 2023 he got enrolled in Life Choices academy to persue IT 
+    <p>After he dropped out, he went to look for a job at the park where hw was fired for more than 3 times and re-hired again 
     </p>
     </div>
+</div>
+<div class="picture"></div>
 </div>
   </body>
  </html>
